compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/PropertyWithoutName.kt
// test.Foo
package test

interface Foo {
    konst foo: String
    konst
}